<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:keepScreenOn="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/serialport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serialport" >
        </TextView>

        <Spinner
            android:id="@+id/deviceName"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:prompt="@string/serialport" />

        <Button
            android:id="@+id/btnOpenClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/baudrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baudrate" >
        </TextView>

        <Spinner
            android:id="@+id/baudrateSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:prompt="@string/baudrate" />

        <TextView
            android:id="@+id/rts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rts" >
        </TextView>

        <Spinner
            android:id="@+id/rtsSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:prompt="@string/setRTS" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmd" >
        </TextView>

        <CheckBox
            android:id="@+id/hexMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:text="@string/hex" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/clear" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dip" >

        <Button
            android:id="@+id/btnSend"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            />

        <EditText
            android:id="@+id/EditEmission"
            android:layout_toLeftOf="@id/btnSend"
            android:layout_alignParentLeft="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </EditText>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dip" >

        <Button
            android:id="@+id/btnSend2"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/EditEmission2"
            android:layout_toLeftOf="@id/btnSend2"
            android:layout_alignParentLeft="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >
        </EditText>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logdata"></TextView>

    <EditText
        android:id="@+id/EditReception"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:isScrollContainer="true"
        android:scrollbarStyle="insideOverlay" >

    </EditText>


</LinearLayout>